--- a/css/styles.css
+++ b/css/styles.css
@@ -124,3 +124,6 @@ p{
     background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
     text-decoration: none;
   }
+.footer-link{
+color: rgb(0,0,0);
+}
